test/resources/typer/failing/IfAndErrorWrong.grading.amy
object IfAndErrorWrong
  val x: Int(32) = if (true) then error("") else "" end if;
  x
end IfAndErrorWrong
